Fixed contrast

--- a/assets/results.css
+++ b/assets/results.css
@@ -149,3 +149,6 @@ color: #eee !important;
 .gsc-option-menu {
     background-color:#2d2f33 !important;
 }
+.gs-spelling {
+    color: #eee !important;
+}
